--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,12 @@ services:
     volumes:
       - ./frontend:/app
       - /app/node_modules
+    env_file:
+      - ./.env
     environment:
       - NODE_ENV=development
+      - VITE_SUPABASE_URL=${VITE_SUPABASE_URL}
+      - VITE_SUPABASE_KEY=${VITE_SUPABASE_KEY}
 
   go-backend:
     build:
