--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
-    "http-proxy-middleware": "^3.0.5",
-    "sass": "^1.87.0"
+    "http-proxy-middleware": "^3.0.5"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
