--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:all": "npm run build && npm run build:frontend",
     "start": "node dist/server.js",
     "dev": "env NODE_ENV=development ts-node server.ts",
-    "prod": "env NODE_ENV=production npm run build:all && npm start"
+    "prod": "env NODE_ENV=production npm run build:all && npm start",
+    "deploy": "npx wrangler deploy --assets=./frontend/dist"
   },
   "keywords": [],
   "author": "",
